--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -12,9 +12,10 @@
 packages:
   yum:
     gcc-c++: []
+    python3: []
+    python3-pip: []
   python:
-    pyzmq: [ "16.0.3" ]
-    locustio: [ "0.8.1" ]
+    locustio: []
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
