Fix the name of the locust python package, and remove unnecessary package.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -15,7 +15,7 @@ packages:
     python3: []
     python3-pip: []
   python:
-    locustio: []
+    locust: []
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
