Move the python installations to a command call, and invoke removing the requests package as that seems to cause issues on reinstall.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -14,8 +14,6 @@ packages:
     gcc-c++: []
     python3: []
     python3-pip: []
-  python:
-    locust: []
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
@@ -23,6 +21,10 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
+  remove_requests:
+    yum remove python3-requests
+  install_packages:
+    python3 -m pip install locust
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
