Add the  notation, learning a new language.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -22,9 +22,9 @@ option_settings:
 
 commands:
   remove_requests:
-    yum remove python3-requests
+    command: yum remove python3-requests
   install_packages:
-    python3 -m pip install locust
+    command: python3 -m pip install locust
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
