--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -27,8 +27,9 @@ commands:
     command: python3 -m pip install locust
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
-  copy_deploy_manifest:
-    command: "cp /opt/elasticbeanstalk/deploy/manifest /tmp/; chmod 777 /tmp/manifest"
+# Comment this out as it fails, why is this here?  What would you do with a file in temp?
+#  copy_deploy_manifest:
+#    command: "cp /opt/elasticbeanstalk/deploy/manifest /tmp/; chmod 777 /tmp/manifest"
 
 files:
   # add configuration to display the locust log files when tailing logs
