Combine the python requests removal and locust installation into one command to see if that works.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -21,10 +21,8 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
-  remove_requests:
-    command: yum remove python3-requests
   install_packages:
-    command: python3 -m pip install locust
+    command: yum remove python3-requests && python3 -m pip install locust
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
 # Comment this out as it fails, why is this here?  What would you do with a file in temp?
