--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -22,7 +22,7 @@ option_settings:
 
 commands:
   install_packages:
-    command: yum remove python3-requests && python3 -m pip install locust
+    command: yum remove -y python3-requests && python3 -m pip install locust
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
 # Comment this out as it fails, why is this here?  What would you do with a file in temp?
