Change the path to the manifest file to match updated files from beanstalk.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -25,9 +25,8 @@ commands:
     command: yum remove -y python3-requests && python3 -m pip install locust
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
-# Comment this out as it fails, why is this here?  What would you do with a file in temp?
-#  copy_deploy_manifest:
-#    command: "cp /opt/elasticbeanstalk/deploy/manifest /tmp/; chmod 777 /tmp/manifest"
+  copy_deploy_manifest:
+    command: "cp /opt/elasticbeanstalk/deployment/app_version_manifest.json /tmp/; chmod 777 /tmp/manifest"
 
 files:
   # add configuration to display the locust log files when tailing logs
