--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -26,7 +26,7 @@ commands:
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
-    command: "cp /opt/elasticbeanstalk/deployment/app_version_manifest.json /tmp/; chmod 777 /tmp/manifest"
+    command: "cp /opt/elasticbeanstalk/deployment/app_version_manifest.json /tmp/manifest; chmod 777 /tmp/manifest"
 
 files:
   # add configuration to display the locust log files when tailing logs
