Add pragma locust test scripts, and update the setup.config to invoke Locust our way.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -22,7 +22,7 @@ option_settings:
 
 commands:
   install_packages:
-    command: yum remove -y python3-requests && python3 -m pip install locust
+    command: yum remove -y python3-requests && python3 -m pip install -r /var/app/staging/requirements.txt
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
