--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -22,7 +22,8 @@ option_settings:
 
 commands:
   install_packages:
-    command: yum remove -y python3-requests && python3 -m pip install -r /var/app/staging/requirements.txt
+    command: yum remove -y python3-requests && python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
   copy_deploy_manifest:
