Add python installation steps for python3.10

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -12,8 +12,8 @@
 packages:
   yum:
     gcc-c++: []
-    python3: []
-    python3-pip: []
+    python3.11: []
+    python3.11-pip: []
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
@@ -21,6 +21,20 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
+  install_openssl11:
+    command: sudo yum install openssl11
+  download_python:
+    command: wget https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tgz
+  unpack_python:
+    command: tar -xzf Python-3.10.13.tgz
+  configure_python_build:
+    command: ./configure --enable-opimizations --with-openssl-rpath=/usr/lib64
+    cwd: ~/Python-3.10.13/
+  build_python_install:
+    command: sudo make altinstall
+    cwd: ~/Python-3.10.13/
+    test: [python3.10 -c "import ssl; print(ssl.OPENSSL_VERSION)"]
+    # command: wget https://www.python.org/ftp/python/3.10.4/Python-3.10.4.tgz && tar -xf Python-3.10.4.tgz && sudo mv Python-3.10.4 /usr/lib/python3 && ln -s /usr/bin/python3 /usr/lib/python3/python3.11 && cd /usr/lib/python3/ && ./configure --enable-optimizations
   install_packages:
     command: yum remove -y python3-requests && python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
 
