--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -12,8 +12,6 @@
 packages:
   yum:
     gcc-c++: []
-    python3.11: []
-    python3.11-pip: []
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
@@ -21,22 +19,31 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
+  make_temp_directory:
+    command: mkdir /tmp/python
   install_openssl11:
     command: sudo yum install openssl11
   download_python:
     command: wget https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tgz
+    cwd: /tmp/python
   unpack_python:
     command: tar -xzf Python-3.10.13.tgz
+    cwd: /tmp/python
   configure_python_build:
     command: ./configure --enable-opimizations --with-openssl-rpath=/usr/lib64
-    cwd: ~/Python-3.10.13/
+    cwd: cwd: /tmp/python/Python-3.10.13/
   build_python_install:
     command: sudo make altinstall
-    cwd: ~/Python-3.10.13/
-    test: [python3.10 -c "import ssl; print(ssl.OPENSSL_VERSION)"]
-    # command: wget https://www.python.org/ftp/python/3.10.4/Python-3.10.4.tgz && tar -xf Python-3.10.4.tgz && sudo mv Python-3.10.4 /usr/lib/python3 && ln -s /usr/bin/python3 /usr/lib/python3/python3.11 && cd /usr/lib/python3/ && ./configure --enable-optimizations
+    cwd: cwd: /tmp/python/Python-3.10.13/
+    test: [python3.10 -c "import ssl; print(ssl.OPENSSL_VERSION)"]    
+  install_python_pip:
+    command: curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
   install_packages:
-    command: yum remove -y python3-requests && python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+    command: python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+
+    # install_packages:
+    # command: wget https://www.python.org/ftp/python/3.10.4/Python-3.10.4.tgz && tar -xf Python-3.10.4.tgz && sudo mv Python-3.10.4 /usr/lib/python3 && ln -s /usr/bin/python3 /usr/lib/python3/python3.11 && cd /usr/lib/python3/ && ./configure --enable-optimizations
+    # command: yum remove -y python3-requests && python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
 
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
