Fix the cwd command on multiple lines.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -31,10 +31,10 @@ commands:
     cwd: /tmp/python
   configure_python_build:
     command: ./configure --enable-opimizations --with-openssl-rpath=/usr/lib64
-    cwd: cwd: /tmp/python/Python-3.10.13/
+    cwd: /tmp/python/Python-3.10.13/
   build_python_install:
     command: sudo make altinstall
-    cwd: cwd: /tmp/python/Python-3.10.13/
+    cwd: /tmp/python/Python-3.10.13/
     test: [python3.10 -c "import ssl; print(ssl.OPENSSL_VERSION)"]    
   install_python_pip:
     command: curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
