CoMmAnDs ArE eXeCuTeD aPhAbEtIcAlLy.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -19,26 +19,26 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
-  make_temp_directory:
+  1make_temp_directory:
     command: mkdir /tmp/python
-  install_openssl11:
-    command: sudo yum install openssl11
-  download_python:
+  2install_openssl11:
+    command: yum install openssl11
+  3download_python:
     command: wget https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tgz
     cwd: /tmp/python
-  unpack_python:
+  4unpack_python:
     command: tar -xzf Python-3.10.13.tgz
     cwd: /tmp/python
-  configure_python_build:
+  5configure_python_build:
     command: ./configure --enable-opimizations --with-openssl-rpath=/usr/lib64
     cwd: /tmp/python/Python-3.10.13/
-  build_python_install:
-    command: sudo make altinstall
+  6build_python_install:
+    command: make altinstall
     cwd: /tmp/python/Python-3.10.13/
     test: [python3.10 -c "import ssl; print(ssl.OPENSSL_VERSION)"]    
-  install_python_pip:
+  7install_python_pip:
     command: curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
-  install_packages:
+  8install_packages:
     command: python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
 
     # install_packages:
