Reconfigure to use pyenv to install Python 3.10.4

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -11,7 +11,21 @@
 
 packages:
   yum:
+    gcc: []
     gcc-c++: []
+    make: []
+    patch: []
+    zlib-devel: []
+    bzip2: []
+    bzip2-devel: []
+    readline-devel: []
+    sqlite: []
+    sqlite-devel: []
+    openssl-devel: []
+    tk-devel: []
+    libffi-devel: []
+    xz-devel: []
+    git: []
 
 option_settings:
   aws:elasticbeanstalk:application:environment:
@@ -19,31 +33,18 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
-  1make_temp_directory:
-    command: mkdir /tmp/python
-  2install_openssl11:
-    command: yum install openssl11
-  3download_python:
-    command: wget https://www.python.org/ftp/python/3.10.13/Python-3.10.13.tgz
-    cwd: /tmp/python
-  4unpack_python:
-    command: tar -xzf Python-3.10.13.tgz
-    cwd: /tmp/python
-  5configure_python_build:
-    command: ./configure --enable-opimizations --with-openssl-rpath=/usr/lib64
-    cwd: /tmp/python/Python-3.10.13/
-  6build_python_install:
-    command: make altinstall
-    cwd: /tmp/python/Python-3.10.13/
-    test: [python3.10 -c "import ssl; print(ssl.OPENSSL_VERSION)"]    
-  7install_python_pip:
-    command: curl -sS https://bootstrap.pypa.io/get-pip.py | python3.10
-  8install_packages:
-    command: python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+  1install_pyenv:
+    command: curl https://pyenv.run | bash
 
-    # install_packages:
-    # command: wget https://www.python.org/ftp/python/3.10.4/Python-3.10.4.tgz && tar -xf Python-3.10.4.tgz && sudo mv Python-3.10.4 /usr/lib/python3 && ln -s /usr/bin/python3 /usr/lib/python3/python3.11 && cd /usr/lib/python3/ && ./configure --enable-optimizations
-    # command: yum remove -y python3-requests && python3 -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+  2install_python310:
+    command: eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
+    env:
+      PYENV_ROOT="$HOME/.pyenv"
+      PATH="$PYENV_ROOT/bin:$PATH"
+    test: python --version == "Python 3.10.4"
+
+  3install_packages:
+    command: python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
 
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
