--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -39,8 +39,8 @@ commands:
   2install_python310:
     command: eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
     env:
-      PYENV_ROOT="$HOME/.pyenv"
-      PATH="$PYENV_ROOT/bin:$PATH"
+      PYENV_ROOT: "$HOME/.pyenv"
+      PATH: "$PYENV_ROOT/bin:$PATH"
     test: python --version == "Python 3.10.4"
 
   3install_packages:
