--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -43,6 +43,12 @@ commands:
       PATH: "$PYENV_ROOT/bin:$PATH"
     test: python --version == "Python 3.10.4"
 
+  2aupdate_bashrc:
+    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc && echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+
+  2bupdate_profile:
+    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile && echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
+
   3install_packages:
     command: python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
 
