--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -43,10 +43,7 @@ commands:
     command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile && echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
 
   4install_python310:
-    command: eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
-    env:
-      PYENV_ROOT: "$HOME/.pyenv"
-      PATH: "$PYENV_ROOT/bin:$PATH"
+    command: source ~/.bashrc && eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
 
   5install_packages:
     command: python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
