Add pyenv evaluation and sourcing the bashrc file to before installing python modules.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -46,7 +46,7 @@ commands:
     command: source ~/.bashrc && eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
 
   5install_packages:
-    command: python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+    command: source ~/.bashrc && eval "$(pyenv init -)" && python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
 
   create_home_dir:
     command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
