Fix creating the webapp directory, and add the pyenv and python stuff to webapp to ensure downstreams work.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -33,25 +33,32 @@ option_settings:
     EB_ENV_NAME: '`{"Ref" : "AWSEBEnvironmentName"}`'
 
 commands:
-  1install_pyenv:
+  01install_pyenv:
     command: curl https://pyenv.run | bash
 
-  2update_bashrc:
+  02update_bashrc:
     command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc && echo 'eval "$(pyenv init -)"' >> ~/.bashrc
 
-  3update_profile:
+  03update_profile:
     command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile && echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
 
-  4install_python310:
+  04install_python310:
     command: source ~/.bashrc && eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
 
-  5install_packages:
+  05install_packages:
     command: source ~/.bashrc && eval "$(pyenv init -)" && python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
-
-  create_home_dir:
-    command: "mkdir /home/webapp | chown webapp:webapp /home/webapp"
-  copy_deploy_manifest:
+  
+  07create_home_dir:
+    command: "mkdir -p /home/webapp | chown webapp:webapp /home/webapp"
+  
+  08copy_deploy_manifest:
     command: "cp /opt/elasticbeanstalk/deployment/app_version_manifest.json /tmp/manifest; chmod 777 /tmp/manifest"
+  
+  09update_webapp_bashrc:
+    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bashrc && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bashrc && echo 'eval "$(pyenv init -)"' >> /home/webapp/.bashrc
+  
+  10update_webapp_profile:
+    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bash_profile && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bash_profile && echo 'eval "$(pyenv init -)"' >> /home/webapp/.bash_profile
 
 files:
   # add configuration to display the locust log files when tailing logs
