--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -34,19 +34,40 @@ option_settings:
 
 commands:
   01install_pyenv:
-    command: curl https://pyenv.run | bash
+    command: | 
+      if [ ! -f /root/.pyenv ]; then
+        curl https://pyenv.run | bash; 
+      fi
 
   02update_bashrc:
-    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc && echo 'eval "$(pyenv init -)"' >> ~/.bashrc
+    command: |
+      if ! grep -q "export PYENV_ROOT" ~/.bashrc; then
+        echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc 
+        echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc 
+        echo 'eval "$(pyenv init -)"' >> ~/.02update_bashrc
+      fi
 
   03update_profile:
-    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile && echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
+    command: |
+      if ! grep -q "export PYENV_ROOT" ~/.bash_profile; then
+        echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile 
+        echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
+        echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
+      fi
 
   04install_python310:
-    command: source ~/.bashrc && eval "$(pyenv init -)" && pyenv install 3.10.4 && pyenv global 3.10.4
+    command: |
+      if [ "$(pyenv shims | grep 3.10.4)" == "" ]; then
+        source ~/.bashrc 
+        eval "$(pyenv init -)" 
+        pyenv install 3.10.4 && pyenv global 3.10.4
+      fi
 
   05install_packages:
-    command: source ~/.bashrc && eval "$(pyenv init -)" && python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
+    command: |
+      source ~/.bashrc 
+      eval "$(pyenv init -)" 
+      python -m pip install locust==2.16.1 locust-plugins==4.0.0 paho-mqtt==1.6.1 websocket-client==1.6.2 ujson
   
   07create_home_dir:
     command: "mkdir -p /home/webapp | chown webapp:webapp /home/webapp"
@@ -55,10 +76,20 @@ commands:
     command: "cp /opt/elasticbeanstalk/deployment/app_version_manifest.json /tmp/manifest; chmod 777 /tmp/manifest"
   
   09update_webapp_bashrc:
-    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bashrc && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bashrc && echo 'eval "$(pyenv init -)"' >> /home/webapp/.bashrc
+    command: |
+      if ! grep -q "export PYENV_ROOT" /home/webapp/.bashrc; then
+        echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bashrc
+        echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bashrc
+        echo 'eval "$(pyenv init -)"' >> /home/webapp/.bashrc
+      fi
   
   10update_webapp_profile:
-    command: echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bash_profile && echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bash_profile && echo 'eval "$(pyenv init -)"' >> /home/webapp/.bash_profile
+    command: |
+      if ! grep -q "export PYENV_ROOT" /home/webapp/.bash_profile; then
+        echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bash_profile
+        echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bash_profile
+        echo 'eval "$(pyenv init -)"' >> /home/webapp/.bash_profile
+      fi
 
 files:
   # add configuration to display the locust log files when tailing logs
