/root/.pyenv is a directory, not a file.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -35,7 +35,7 @@ option_settings:
 commands:
   01install_pyenv:
     command: | 
-      if [ ! -f /root/.pyenv ]; then
+      if [ ! -d /root/.pyenv ]; then
         curl https://pyenv.run | bash; 
       fi
 
