Fix grepping for existing python version.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -57,8 +57,8 @@ commands:
 
   04install_python310:
     command: |
-      if [ "$(pyenv shims | grep 3.10.4)" == "" ]; then
-        source ~/.bashrc 
+      source ~/.bashrc 
+      if [ "$(pyenv shims | grep python3.10)" == "" ]; then        
         eval "$(pyenv init -)" 
         pyenv install 3.10.4 && pyenv global 3.10.4
       fi
