--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -39,6 +39,7 @@ commands:
       if ! grep -q "export PYENV_ROOT" ~/.bashrc; then
         echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bashrc 
         echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bashrc 
+        echo 'export PATH="$PYENV_ROOT/shims:$PATH"' >> ~/.bashrc 
         echo 'eval "$(pyenv init -)"' >> ~/.02update_bashrc
       fi
 
@@ -47,6 +48,7 @@ commands:
       if ! grep -q "export PYENV_ROOT" ~/.bash_profile; then
         echo 'export PYENV_ROOT="$HOME/.pyenv"' >> ~/.bash_profile 
         echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> ~/.bash_profile
+        echo 'export PATH="$PYENV_ROOT/shims:$PATH"' >> ~/.bash_profile 
         echo 'eval "$(pyenv init -)"' >> ~/.bash_profile
       fi
 
@@ -75,6 +77,7 @@ commands:
       if ! grep -q "export PYENV_ROOT" /home/webapp/.bashrc; then
         echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bashrc
         echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bashrc
+        echo 'export PATH="$PYENV_ROOT/shims:$PATH"' >> /home/webapp/.bashrc
         echo 'eval "$(pyenv init -)"' >> /home/webapp/.bashrc
       fi
   
@@ -83,6 +86,7 @@ commands:
       if ! grep -q "export PYENV_ROOT" /home/webapp/.bash_profile; then
         echo 'export PYENV_ROOT="$HOME/.pyenv"' >> /home/webapp/.bash_profile
         echo 'command -v pyenv >/dev/null || export PATH="$PYENV_ROOT/bin:$PATH"' >> /home/webapp/.bash_profile
+        echo 'export PATH="$PYENV_ROOT/shims:$PATH"' >> /home/webapp/.bash_profile
         echo 'eval "$(pyenv init -)"' >> /home/webapp/.bash_profile
       fi
 
