Change controller to run the headed controller script.:

--- a/controller/env.yaml
+++ b/controller/env.yaml
@@ -1,5 +1,5 @@
 AWSConfigurationTemplateVersion: 1.1.0.0
-SolutionStack: 64bit Amazon Linux 2023 v4.0.9 running Python 3.9
+# SolutionStack: Corretto 21 running on 64bit Amazon Linux 2023
 OptionSettings:
   aws:elasticbeanstalk:command:
     BatchSize: '1'
@@ -28,5 +28,5 @@ Tags:
   Name: Spectre-Pragma-Load-Test-Controller
   Owners: Automation
   Environment: test
-CName: load-test+
-EnvironmentName: load-test-controller+
+CName: spectre-pragma-load-test+
+EnvironmentName: spectre-pragma-load-test-controller+
