Update to configure correct load balancer.

--- a/.ebextensions/setup.config
+++ b/.ebextensions/setup.config
@@ -34,6 +34,11 @@ commands:
   02copy_deploy_manifest:
     command: "cp /opt/elasticbeanstalk/deployment/app_version_manifest.json /tmp/manifest; chmod 777 /tmp/manifest"
 
+option_settings:
+  aws:elb:listener:80:
+    ListenerProtocol: HTTP
+    InstancePort: 8089
+
 files:
   # add configuration to display the locust log files when tailing logs
   "/opt/elasticbeanstalk/tasks/taillogs.d/locustio.conf":
