Update subnets to include more than one subnet.  Update build.sh to include additional parameters for launching locust.

--- a/.ebextensions/vpc-default.config
+++ b/.ebextensions/vpc-default.config
@@ -1,4 +1,4 @@
 option_settings:
   aws:ec2:vpc:
     VPCId: "vpc-0b031238e015f1106"
-    Subnets: "subnet-0ba59432b38731078"
+    Subnets: "subnet-0ba59432b38731078,subnet-07d59ccac1cb56fb2"
